BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Action_BMS__c.object
<CustomObject>
    <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom object to store information related to activities to be completed by specific users.</description>
    <fields>
        <fullName>Account_BMS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the account related to an action.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Date_BMS__c</fullName>
        <description>Custom field to store the Action date.</description>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Name_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the name of an action.</description>
        <label>Action Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Type_BMS__c</fullName>
        <description>VPRO - January 2012 - BMS Oncology Requirements &amp; Design: Custom field to capture the type action type.</description>
        <label>Action Type</label>
        <picklist>
            <picklistValues>
                <fullName>Appropriate use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm receipt of mailed voucher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirm receipt of mailed MSS Enrollment Guide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_BMS__c</fullName>
        <description>VPRO - March 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the address associated with non-personal actions.</description>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_BMS_CA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date_BMS__c</fullName>
        <description>VPRO - January 2012 - BMS Oncology Requirements &amp; Design: Custom field created to allow users to enter the date they completed an action.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture a description related to a specific activity.</description>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the due date of a given action.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail_Email_Type_BMS__c</fullName>
        <description>VPRO - January 2012 - BMS Oncology Requirements &amp; Design: Custom field to capture the mail/email type for non-personal actions.</description>
        <label>Mail/Email Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to a product related to an action.</description>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resources_BMS__c</fullName>
        <label>Resources</label>
        <picklist>
            <picklistValues>
                <fullName>Resource 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture if an action has been completed or not.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Completed</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - HCP Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - HCP Unavailable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - HCP refused visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visit - HCP is not actively treating patients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZS_ID_BMS__c</fullName>
        <description>VPRO - November 2011 - BMS Oncology Requirements &amp; Design: Custom field to capture the related ZS identification number for a given action.</description>
        <externalId>true</externalId>
        <label>ZS ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All_Actions</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS__c</columns>
        <columns>Product_BMS__c</columns>
        <columns>Description_BMS__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status_BMS__c</columns>
        <columns>Due_Date_BMS__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Actions</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Actions_BMS</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS__c</columns>
        <columns>Product_BMS__c</columns>
        <columns>Description_BMS__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status_BMS__c</columns>
        <columns>Due_Date_BMS__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Actions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Actions_NC_BMS</fullName>
        <columns>NAME</columns>
        <columns>Account_BMS__c</columns>
        <columns>Product_BMS__c</columns>
        <columns>Description_BMS__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Status_BMS__c</columns>
        <columns>Due_Date_BMS__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status_BMS__c</field>
            <operation>equals</operation>
            <value>Not Completed</value>
        </filters>
        <label>My Actions - Not Completed</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Territory_Actions_BMS</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Account_BMS__c</columns>
        <columns>Product_BMS__c</columns>
        <columns>Description_BMS__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Address_BMS__c</columns>
        <columns>Status_BMS__c</columns>
        <columns>Due_Date_BMS__c</columns>
        <columns>Completion_Date_BMS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_BMS__c</field>
            <operation>equals</operation>
            <value>Not Completed</value>
        </filters>
        <filters>
            <field>Product_BMS__c</field>
            <operation>equals</operation>
            <value>Yervoy</value>
        </filters>
        <label>Territory Actions Yervoy not completed</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>ACT-{00000000}</displayFormat>
        <label>Action ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <recordTypes>
        <fullName>Actions</fullName>
        <active>true</active>
        <description>Use of Actions to create Personal and Non Personal actions for Peers</description>
        <label>Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Personal_Actions_BMS</fullName>
        <active>true</active>
        <description>Non-Personal Action Requests</description>
        <label>Non-Personal Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal_Actions_BMS</fullName>
        <active>true</active>
        <description>Personal Action Requests</description>
        <label>Personal Actions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Personal_Actions_Completed</fullName>
        <active>true</active>
        <description>Completed Personal Action Requests</description>
        <label>Personal Actions (Completed)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>